--- a/resources/[FAROESTE]/[SYSTEM]/frp_basicneeds/html/ui.html
+++ b/resources/[FAROESTE]/[SYSTEM]/frp_basicneeds/html/ui.html
@@ -2,7 +2,7 @@
 
 <head>
 	<title> FAROESTE - UI </title>
-	<link rel="stylesheet" href="css/style.css">
+  	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css?family=Roboto:light,regular,medium,thin,italic,mediumitalic,bold"
 		title="roboto">
